chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Kanit&family=Karla&display=swap');

header {
    background-color: #38527E;
    /* #451417*/
    /*#495176*/
    font-family: 'Kanit', sans-serif;
    border: 1px solid black;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
}

header img {
    width: 5rem;
    padding: 1rem;
}

header h1 {
    width: 10rem;
    text-align: center;
    font-size: 140%;
    /* color: #F8A18B; */
    color: #D1EAF9;
    margin: 0;
    padding: 0;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.small-header {
    display: flex;
    align-items: center;
}

#menu {
    background: none;
    border: none;
    position: absolute;
    top: 1rem;
    right: 5%;
    font-size: 2.5rem;
    color: #38527E;
}

#menu::before {
    content: "☰";
    display: flex;
    align-items: center;
}

#menu.open::before {
    content: "✖";
}

.open a {
    display: block;
}

nav {
    display: flex;
    font-size: 1.5rem;
    flex-direction: column;
    align-items: center;
    width: 100%;
}

nav a {
    display: none;
    background-color: #22314c;
    color: #D1EAF9;
    padding: 0.5rem;
    text-align: center;
    text-decoration: none;
    width: 100%;
}

.switch {
    position: absolute;
    top: 4rem;
    right: 6%;
    width: 36px;
    height: 22px;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #D1EAF9;
    -webkit-transition: .4s;
    transition: .4s;
}

.slider:before {
    position: absolute;
    content: "";
    height: 16px;
    width: 16px;
    left: 3px;
    bottom: 3px;
    background-color: #38527E;
    -webkit-transition: .4s;
    transition: .4s;
}

input:checked+.slider {
    background-color: #38527E;
}

input:checked+.slider:before {
    background-color: #D1EAF9;
}

input:focus+.slider {
    box-shadow: 0 0 1px #38527E;
}

input:checked+.slider:before {
    -webkit-transform: translateX(14px);
    -ms-transform: translateX(14px);
    transform: translateX(14px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

nav a:hover {
    background-color: #22314c;
}

main {
    font-family: 'Karla', sans-serif;
    color: #22314c;
    padding-bottom: 1.5rem;
}

.hero-section {
    position: relative;
}

#hero {
    width: 100%;
    height: auto;
    display: block;
    position: relative;
}

#action {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 0.75rem;
    font-size: 1rem;
    background-color: #cfcfcfa3;
    border: 3px solid #000;
    border-radius: 10px;
    font-weight: bold;
    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.6);
    cursor: pointer;
    color: #22314c;
}

#action:visited {
    color: black;
}

#ction:hover {
    color: rgb(70, 70, 70);
}

.events img {
    display: none;
}

.section1,
.section3 {
    margin: 1.5rem;
    padding: 1rem;
    padding-top: 0;
    border: 1px solid gray;
    background-color: #cfcfcf;
}

section.section3 {
    margin-bottom: 0.5rem;
}

.section1 p {
    border-bottom: 1px solid gray;
}

.section2 {
    width: 80%;
    margin: 1rem auto 2rem auto;

}

.section2 p {
    border: 1px solid gray;
    background-color: #cfcfcf;
    padding: 1rem;
}

.section-link {
    text-align: center;
    display: block;
    text-align: center;
    margin: 1rem auto 0 auto;
}

.section-link:visited {
    color: #22314c;
}

section h2 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
    font-family: "Kanit", sans-serif;
    text-align: center;
    border-bottom: 1px solid gray;
}

section p {
    margin-bottom: 0.5rem;
}

footer {
    background-color: #38527E;
    padding-top: 1rem;
    text-align: center;
    font-family: 'Karla', sans-serif;
    font-size: 1.1rem;
    display: grid;
    grid-template-columns: 1.25fr 2fr;
    grid-gap: 1rem;
    color: #D1EAF9;
    border: 1px solid black;
}

.footer-info {
    grid-column: 1/3;
    border-top: 1px solid #D1EAF9;
}

.footer-info p {
    margin: 0.75rem;
}

footer img {
    width: 6rem;
    display: flex;
    grid-column: 1/2;
    margin-top: 2.25rem;
    margin: auto;
}

.contact-info {
    grid-column: 2/3;
    margin: auto;
}

.site-name {
    font-weight: bold;
}

.footer-break {
    display: none;
}

.dark-mode {
    background-color: #000;
    border-color: #eee;
}

main.dark-mode {
    background-color: #22314c;
}

.dark-mode .section2 h2 {
    color: #D1EAF9;
}

